100330 -- remove horizontal scrollbar and fix annual dates populating wrong

--- a/Gargolye/custom/src/scss/modules/plan/_assesment.scss
+++ b/Gargolye/custom/src/scss/modules/plan/_assesment.scss
@@ -191,6 +191,7 @@
 
     #editDatesScreen {
         transform: translateX(10%);
+        overflow-x: hidden;
 
         &.visible {
             transform: translateX(-100%);
